--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,15 @@ services:
       - "$HOME/db_data:/var/lib/postgresql/data" # puts a folder called db_data on your filesystem for persistent storage
     ports:
       - "5432:5432"
+  caddy:
+    image: abiosoft/caddy
+    container_name: caddy01
+    volumes:
+      - ./caddy/config:/config
+      - .:/docker_django
+    ports:
+      - "80:80"
+      - "443:443"
+    environment:
+      - WORKER=web
+    command: -conf /config/Caddyfile
